[gd_scene load_steps=34 format=3 uid="uid://dqyu60546624r"]

[ext_resource type="Script" uid="uid://c6f5tpx1lgmhh" path="res://src/scripts/player_movement.gd" id="1_g8hat"]
[ext_resource type="Texture2D" uid="uid://x13v8vtbnyej" path="res://src/Assets/pelado/guyidle-Sheet.png" id="3_ryo25"]
[ext_resource type="Texture2D" uid="uid://bdjp77oa3kfya" path="res://src/Assets/pelado/guybattleidle-Sheet.png" id="4_cbcl6"]
[ext_resource type="PackedScene" uid="uid://c650tofwr83sy" path="res://src/sences/Xplosion.tscn" id="4_vaykk"]
[ext_resource type="Texture2D" uid="uid://c5hrvatayrxnd" path="res://src/Assets/pelado/guywalk-2.png" id="5_k7iwx"]
[ext_resource type="Texture2D" uid="uid://bfkcmfauvnv4k" path="res://src/Assets/pelado/guywalk-3.png" id="6_uku0v"]
[ext_resource type="Texture2D" uid="uid://bhvr5leg0rq67" path="res://src/Assets/pelado/guywalk-4.png" id="7_qym8c"]
[ext_resource type="Texture2D" uid="uid://b43jobpitefsf" path="res://src/Assets/pelado/guywalk-5.png" id="8_6seei"]
[ext_resource type="Texture2D" uid="uid://b1xsr1gus0m0k" path="res://src/Assets/pelado/guywalk-6.png" id="9_abftn"]
[ext_resource type="Texture2D" uid="uid://ddme8rbbetecy" path="res://src/Assets/pelado/guywalk-7.png" id="10_0pkn0"]
[ext_resource type="Texture2D" uid="uid://cbjjvikmi3tes" path="res://src/Assets/pelado/guywalk-8.png" id="11_bg0yv"]
[ext_resource type="Texture2D" uid="uid://bodngyqxcjj1k" path="res://src/Assets/pelado/guywalk-9.png" id="12_7dseu"]
[ext_resource type="Texture2D" uid="uid://de2ut1x60dptr" path="res://src/Assets/pelado/guywalk-10.png" id="13_ddtoe"]
[ext_resource type="Texture2D" uid="uid://cmo7nw5fm2yir" path="res://src/Assets/pelado/guywalk-11.png" id="14_p5c4b"]
[ext_resource type="Texture2D" uid="uid://cm6pacspqxd24" path="res://src/Assets/pelado/guywalk-12.png" id="15_ochlm"]
[ext_resource type="Texture2D" uid="uid://cctkaeajl3sed" path="res://src/Assets/pelado/guywalk-13.png" id="16_huw2a"]
[ext_resource type="PackedScene" uid="uid://djmmeokr07dd0" path="res://src/components/hit_manager.tscn" id="17_ktr20"]
[ext_resource type="AudioStream" uid="uid://cwsopohsnceal" path="res://src/Assets/Sounds/Sonidos/PasosPj.mp3" id="18_cf154"]

[sub_resource type="AtlasTexture" id="AtlasTexture_24p5y"]
atlas = ExtResource("3_ryo25")
region = Rect2(31, 0, 13, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaykk"]
atlas = ExtResource("3_ryo25")
region = Rect2(84, 0, 13, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2qdg"]
atlas = ExtResource("3_ryo25")
region = Rect2(137, 0, 13, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfflm"]
atlas = ExtResource("3_ryo25")
region = Rect2(190, 0, 13, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfkym"]
atlas = ExtResource("3_ryo25")
region = Rect2(243, 0, 13, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3cif"]
atlas = ExtResource("3_ryo25")
region = Rect2(296, 0, 13, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1eysa"]
atlas = ExtResource("3_ryo25")
region = Rect2(349, 0, 13, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryo25"]
atlas = ExtResource("4_cbcl6")
region = Rect2(25, 0, 25, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbcl6"]
atlas = ExtResource("4_cbcl6")
region = Rect2(78, 0, 25, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2c5n"]
atlas = ExtResource("4_cbcl6")
region = Rect2(131, 0, 25, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7iwx"]
atlas = ExtResource("4_cbcl6")
region = Rect2(184, 0, 25, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uku0v"]
atlas = ExtResource("4_cbcl6")
region = Rect2(237, 0, 25, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qym8c"]
atlas = ExtResource("4_cbcl6")
region = Rect2(290, 0, 25, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s6yj6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24p5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaykk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2qdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfflm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfkym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3cif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1eysa")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryo25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbcl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2c5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7iwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uku0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qym8c")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_k7iwx")
}, {
"duration": 1.0,
"texture": ExtResource("6_uku0v")
}, {
"duration": 1.0,
"texture": ExtResource("7_qym8c")
}, {
"duration": 1.0,
"texture": ExtResource("8_6seei")
}, {
"duration": 1.0,
"texture": ExtResource("9_abftn")
}, {
"duration": 1.0,
"texture": ExtResource("10_0pkn0")
}, {
"duration": 1.0,
"texture": ExtResource("11_bg0yv")
}, {
"duration": 1.0,
"texture": ExtResource("12_7dseu")
}, {
"duration": 1.0,
"texture": ExtResource("13_ddtoe")
}, {
"duration": 1.0,
"texture": ExtResource("14_p5c4b")
}, {
"duration": 1.0,
"texture": ExtResource("15_ochlm")
}, {
"duration": 1.0,
"texture": ExtResource("16_huw2a")
}],
"loop": true,
"name": &"walk",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3cif"]
size = Vector2(6.68903, 28)

[node name="BaldMAn" type="CharacterBody2D" groups=["Jugador", "JugadorGlobal"]]
collision_layer = 128
collision_mask = 11
script = ExtResource("1_g8hat")

[node name="Animations" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s6yj6")
animation = &"idle"
frame_progress = 0.292262

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1)
scale = Vector2(1.04649, 1)
shape = SubResource("RectangleShape2D_w3cif")

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.1

[node name="InputBuffer" type="Timer" parent="."]
wait_time = 0.15

[node name="iFrames" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Xplosion" parent="." instance=ExtResource("4_vaykk")]

[node name="HitManager" parent="." instance=ExtResource("17_ktr20")]
position = Vector2(-13, -19)
MAX_LIFE = 100
MAX_CORE_HIT_AMOUNT = 100

[node name="Pasos" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_cf154")
volume_db = 24.0

[connection signal="timeout" from="CoyoteTime" to="." method="_on_coyote_time_timeout"]
[connection signal="timeout" from="InputBuffer" to="." method="_on_input_buffer_timeout"]
[connection signal="timeout" from="iFrames" to="." method="_on_i_frames_timeout"]
